# wood-cutting-tool

./: .gitignore  .prettierrc  README.md  build.sh  docker-compose.yml  genkeys.sh  init.sql  nginx.conf  prettify.sh  setup.sh
api/: Cargo.toml  Dockerfile
api/src/: db.rs  main.rs
api/src/api/: mod.rs
api/src/api/modules/: controllers.rs
api/src/api/references/: controllers.rs  mod.rs  urls.rs
api/src/api/v1/: mod.rs
api/src/api/v1/modules/: controllers.rs  mod.rs
api/src/api/v1/plank_types/: controllers.rs  mod.rs
api/src/api/v1/projects/: controllers.rs  mod.rs  models.rs
api/src/api/v1/references/: controllers.rs
api/src/middlewares/: auth_middleware.rs
app/: index.html  prettify.sh  reference.txt  references.html
app/api/: plankTypes.php  references.php
app/css/: bundle.css  common.css  content.css  index.css  navbar.css  references.css  style.css  topbar.css
app/js/: index.js
auth/: Cargo.toml  Dockerfile
auth/src/: db.rs  main.rs
auth/src/api/v1/: mod.rs
auth/src/api/v1/middlewares/: auth_middleware.rs  encrypt_middleware.rs  mod.rs
auth/src/api/v1/user/: controllers.rs  mod.rs  models.rs
modules/hello-world/: package-lock.json  package.json
modules/login/: .eslintignore  .prettierrc  package-lock.json  package.json
modules/references/: .eslintrc  package-lock.json  package.json  removeCssImport.sh
modules/wood-cutting-tool/: .gitignore  removeCssImport.sh
php/: Dockerfile
php/api/: plankTypes.php  (+1 more)
site/: index.html  script.js
ui/: config.ts  package-lock.json  package.json  prettify.sh  tsconfig.json
(+142 files in other folders)
