[package]
name = "wood-cutting-auth"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wcauth"
path = "src/main.rs"
test = false
bench = false

[dependencies]
actix-web = "4"
dotenv = "0.15"
sqlx = { version = "0.5", features = ["runtime-actix-rustls", "mysql"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
